1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -15,8 +15,13 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 Traditional agencies build. **We build with impact.**:br **We analyze real user behavior** and refine every touchpoint to **drive conversions.**
 ::
 
-::tabs
-  :::tab-item{title="SaaS"}
+::c-tabs
+---
+description: Custom-built solutions that make selling easier, faster, and more
+  effective—without unnecessary complexity.
+title: What We Do
+---
+  :::c-tab-item{title="SaaS (Software-as-a-Service)"}
     ::::row
       :::::c-card
       ---
@@ -29,12 +34,12 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
       No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
       :::::
     
-      :::::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
-      Custom-built themes that fit your brand and work exactly as they should—fast and smooth.
-      :::::
-    
       :::::c-card{heading="Plugin Development" heading-size="s" heading-tag="h3"}
       When out-of-the-box isn’t enough, we build the features your shop actually needs.
+      :::::
+    
+      :::::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
+      Custom-built themes that fit your brand and work exactly as they should—fast and smooth.
       :::::
     
       :::::c-card{heading="Shop Relaunch" heading-size="s" heading-tag="h3"}
@@ -51,15 +56,11 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
     
       :::::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
       Custom portals, personalized pricing, and seamless bulk ordering.
-      :::::
-    
-      :::::c-card{heading="Shop Migration" heading-size="s" heading-tag="h3"}
-      Move your shop without downtime or headaches—just better performance.
       :::::
     ::::
   :::
 
-  :::tab-item{title="E-Commerce"}
+  :::c-tab-item{title="E-Commerce"}
     ::::row
       :::::c-card
       ---
@@ -94,10 +95,6 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
     
       :::::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
       Custom portals, personalized pricing, and seamless bulk ordering.
-      :::::
-    
-      :::::c-card{heading="Shop Migration" heading-size="s" heading-tag="h3"}
-      Move your shop without downtime or headaches—just better performance.
       :::::
     ::::
   :::
