1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -96,6 +96,10 @@ title: What We Do
       :::::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
       Custom portals, personalized pricing, and seamless bulk ordering.
       :::::
+    
+      :::::c-card{heading="Shop Migration" heading-size="s" heading-tag="h3"}
+      Move your shop without downtime or headaches—just better performance.
+      :::::
     ::::
   :::
 ::
