1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -31,31 +31,35 @@ title: What We Do
       heading-tag: h3
       icon: icons/icon.png
       ---
-      No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
+      Clean, intuitive interfaces that keep users engaged and drive conversions.
       :::::
     
       :::::c-card{heading="Plugin Development" heading-size="s" heading-tag="h3"}
-      When out-of-the-box isn’t enough, we build the features your shop actually needs.
+      Test your SaaS concept before building—real feedback, real market insights.
       :::::
     
       :::::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
-      Custom-built themes that fit your brand and work exactly as they should—fast and smooth.
+      Scalable, high-performance platforms built to handle real growth.
       :::::
     
       :::::c-card{heading="Shop Relaunch" heading-size="s" heading-tag="h3"}
-      Your store, but better. Faster, cleaner, and built to sell more.
+      Get to market fast with a lean, functional version of your SaaS.
       :::::
     
       :::::c-card{heading="Growth Hacking" heading-size="s" heading-tag="h3"}
-      Real data, smart tweaks—more sales without more traffic.
+      Data-driven optimizations to increase sign-ups, engagement, and upgrades.
       :::::
     
       :::::c-card{heading="Headless E-Commerce" heading-size="s" heading-tag="h3"}
-      Faster load times, full flexibility, and no platform limitations.
+      Seamlessly connect third-party tools, automate workflows, and extend functionality.
       :::::
     
       :::::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
-      Custom portals, personalized pricing, and seamless bulk ordering.
+      Protect user data and ensure compliance with industry regulations.
+      :::::
+    
+      :::::c-card{heading="Cloud Development"}
+      Scalable and secure cloud solutions to support your business growth.
       :::::
     ::::
   :::
