1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -34,15 +34,15 @@ title: What We Do
       Clean, intuitive interfaces that keep users engaged and drive conversions.
       :::::
     
-      :::::c-card{heading="Plugin Development" heading-size="s" heading-tag="h3"}
+      :::::c-card{heading="Idea Validation" heading-size="s" heading-tag="h3"}
       Test your SaaS concept before building—real feedback, real market insights.
       :::::
     
-      :::::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
+      :::::c-card{heading="SaaS Development" heading-size="s" heading-tag="h3"}
       Scalable, high-performance platforms built to handle real growth.
       :::::
     
-      :::::c-card{heading="Shop Relaunch" heading-size="s" heading-tag="h3"}
+      :::::c-card{heading="MVP Development" heading-size="s" heading-tag="h3"}
       Get to market fast with a lean, functional version of your SaaS.
       :::::
     
@@ -50,11 +50,11 @@ title: What We Do
       Data-driven optimizations to increase sign-ups, engagement, and upgrades.
       :::::
     
-      :::::c-card{heading="Headless E-Commerce" heading-size="s" heading-tag="h3"}
+      :::::c-card{heading="API Integration" heading-size="s" heading-tag="h3"}
       Seamlessly connect third-party tools, automate workflows, and extend functionality.
       :::::
     
-      :::::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
+      :::::c-card{heading="Security & Compliance" heading-size="s" heading-tag="h3"}
       Protect user data and ensure compliance with industry regulations.
       :::::
     
