--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -58,7 +58,7 @@ title: What We Do
       Protect user data and ensure compliance with industry regulations.
       :::::
     
-      :::::c-card{heading="Cloud Development"}
+      :::::c-card{heading="Cloud Development" heading-size="s" heading-tag="h3"}
       Scalable and secure cloud solutions to support your business growth.
       :::::
     ::::
