1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -343,7 +343,12 @@ title: What’s Next?
   :::
 ::
 
-::blog-listing{description="Lorem Ipsum" title="Lorem Ipsum"}
+::blog-listing
+---
+description: A look behind the scenes of SaaS and e-commerce development—real
+  strategies, lessons learned, and what actually works in the digital space.
+title: Behind the Screens
+---
 ::
 
 ::cta-section
